fixed overlapping between movies and input

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ height: 101vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* flex-direction: row-reverse column-reverse; */
   flex-wrap: wrap;
 }
 
@@ -125,33 +124,11 @@ transform: translateX(0%);
 transition: all 0.3s ease;
 }
 
-/* input:focus{
-  outline: none;
-} */
-
-
-/* .btn{
-  margin: auto;
-  display: block;
-  padding: 7px;
-  font-size: 1.4rem;
-  width: 400px;
-  border: none;
-  background: red;
-  color: #fff;
-  cursor: pointer;
-  box-shadow: 0 2px 2px rgba(255, 255, 255, 0.3);
-} */
-
-/* .btn:hover{
-  transform: scale(0.98);
-  background-color: rgb(209, 2, 2);
-} */
-
 /* Results */
 
 .results{
-  transform: translateY(-500px);
+  position: absolute;
+  top: 300px;
   color: #fff;
   transition: all 0.3s ease;
 }
@@ -172,14 +149,11 @@ transition: all 0.3s ease;
 
 .movie-box{
   position: relative;
-  /* transform: translateY(-10px); */
   color: #fff;
   text-align: center;
   margin: 25px 15px;
   transition: all 0.3s ease;
 }
-
-
 
 .movie-box:hover{
   transform: scale(1.05);
@@ -201,7 +175,6 @@ transition: all 0.3s ease;
   left: 10px;
   padding: 5px 5px;
   border: 1px solid #fff;
-  /* border-radius: 5px; */
   background:rgb(0, 0, 0);
   color:rgb(255, 255, 255);
   transition: all 0.3s ease;
@@ -228,7 +201,7 @@ transition: all 0.3s ease;
   position: fixed;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.9);
   transition: 0.5s all ease;  
 
@@ -258,8 +231,6 @@ transition: 0.5s all ease;
   z-index: 10;
 }
 
-
-
 .right h1{
   text-align: right;
   font-size: 2rem;
@@ -269,7 +240,6 @@ transition: 0.5s all ease;
   font-size: 1.5rem;
   font-weight: 300;
 }
-
 
 .right p{
   margin-top: 10px;
@@ -321,23 +291,17 @@ transform: scale(1.1);
 }
 
 @media(max-width:1025px){
-  .results{
-    transform: translateY(-500px);
-  }
   .movie-details-poster{
     display: none;
-
   }
+
   .right{
     width: 100%;
-    transform: translate(0px, 0px);
+    transform: translate(0px, 0px);   
   }
   }
 
   @media(max-width:769px){   
-    .results{
-      transform: translateY(-790px);
-      }
       .right{
       height: 90vh;
       }
@@ -349,9 +313,6 @@ transform: scale(1.1);
       padding: 15px;
     }
 
-    .results{
-      transform: translateY(-530px);
-    }
     .right{
       width: 100%;
       padding: 20px;
@@ -399,24 +360,3 @@ transform: scale(1.1);
       width: 80%;
     }
     }
-
-    @media(max-width:412px){   
-      .results{
-        transform: translateY(-510px);
-        }
-       }
-
-      @media(max-width:376px){   
-        .results{
-          transform: translateY(-470px);
-          }}
-
-      @media(max-width:361px){   
-        .results{
-          transform: translateY(-450px);
-          }}
-
-      @media(max-width:321px){   
-        .results{
-          transform: translateY(-380px);
-          }}
